objects/Workday_AR_POC__c.object
<CustomObject>
    <fields>
        <fullName>Delete_test1__c</fullName>
        <label>Delete test1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_test_3__c</fullName>
        <label>Delete test 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Delete_test_picklist_2__c</fullName>
        <label>Delete test picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>added description v2</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <description>added description v2</description>
        <label>Text1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Workday AR POC</label>
    <nameField>
        <label>Workday AR POC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workday AR POCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>